RESOLVED FIXED281796
Fix smart pointer warning in WebPageProxy::getInformationFromImageData
https://bugs.webkit.org/show_bug.cgi?id=281796
Summary Fix smart pointer warning in WebPageProxy::getInformationFromImageData
Ryosuke Niwa
Reported 2024-10-18 18:36:37 PDT
Fix the static analyzer warning in WebPageProxy::getInformationFromImageData.
Attachments
Ryosuke Niwa
Comment 1 2024-10-18 18:38:57 PDT
EWS
Comment 2 2024-10-18 20:22:24 PDT
Committed 285456@main (47a5ef695288): <https://commits.webkit.org/285456@main> Reviewed commits have been landed. Closing PR #35469 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-18 20:23:16 PDT
Note You need to log in before you can comment on or make changes to this bug.