Fix smart pointer warning in WebPageProxy::getInformationFromImageData https://bugs.webkit.org/show_bug.cgi?id=281796

Reviewed by Sihui Liu.

* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::getInformationFromImageData):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::ensureProtectedRunningProcess):
* Source/WebKit/UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/285456@main